[package]
name = "sledtool"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command-line tool to query, modify, import and export Sled key-value databases."
keywords = ["sled", "cli"]
categories = ["database", "command-line-utilities"]
repository = "https://github.com/vi/sledtool"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
argh = "0.1.4"
hex = "0.4.2"
serde = "1.0.118"
serde_json = "1.0.61"
sled = {version="0.34.6",features=["compression"]}
